[tool.poetry]
name = "rema-parser"
version = "0.1.0"
description = ""
authors = ["Andreas Bergem <bergem.andreas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
